--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
       "php": "^5.5.8",
-      "stormpath/sdk": "1.14.*"
+      "stormpath/sdk": "1.14.*",
+        "twbs/bootstrap": "4.0.0-alpha.6"
     }
 }
